--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,21 @@
 body{
-    background: pink;
+    height: 842px;
+    width: 595px;
+    border: 1px solid grey;
+    background: rgb(250, 250, 250);
+    font-family: Roboto, sans-serif;
+    font-weight:400;
+    -webkit-font-smoothing:antialiased;
+}
+
+header{
+    background: goldenrod;
+    color: white;
+    font-size: 18px;
+    box-shadow:0 2px 5px rgba(0,0,0,.26);
+    padding:16px;
+}
+
+.content{
+margin:60px;
 }
