--- a/src/styless.css
+++ b/src/styless.css
@@ -1,8 +1,8 @@
 body {
     height: 842px;
     margin: 0;
-    width: 595px;
-    border: 1px solid grey;
+    /* width: 595px; */
+    /* border: 1px solid light-grey; */
     background: rgb(250, 250, 250);
     font-family: Roboto, sans-serif;
     font-weight: 400;
@@ -15,10 +15,30 @@ header {
     font-size: 18px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, .26);
     padding: 16px;
+    vertical-align: text-bottom;
+}
+
+.head-wrap {
+    max-width: 700px;
+    margin: auto;
+}
+
+.email {
+    float: right;
+    font-style: italic;
+    font-size: 10px;
+    vertical-align: text-bottom;
+}
+
+.title {
+    color: goldenrod;
+    clear: both;
 }
 
 .content {
-    margin: 60px;
+    margin: 60px auto;
+    color: #666;
+    max-width: 595px;
 }
 
 .bedrijf-wrap {
@@ -26,20 +46,24 @@ header {
     vertical-align: -webkit-baseline-middle;
 }
 
-.uitleg {
-    clear: both;
-    font-size: 11px;
-}
-
 .bedrijf {
+    color: #333;
     float: left;
     clear: left;
     font-size: 15px;
 }
 
 .discription {
+    color: #333;
     float: right;
     font-size: 15px;
+    font-style: italic;
+}
+
+.uitleg {
+    padding-left: 15px;
+    clear: both;
+    font-size: 11px;
 }
 
 p {
@@ -48,8 +72,40 @@ p {
 
 li {
     list-style: none;
+    padding-bottom: 20px;
+}
+
+li:last-child {
+    padding-bottom: 20px;
 }
 
 ul {
     padding: 0;
+}
+
+.kwart-wrap {
+    margin: 16px 0;
+}
+
+.kwart {
+    font-size: 13px;
+    float: left;
+    width: 25%;
+    height: 30px;
+    white-space: nowrap;
+    color: #333;
+}
+
+.kwart:last-child {
+    padding-bottom: 20px;
+}
+
+.kwart::before {
+    content: '-';
+}
+
+.hobby {
+    font-size: 13px;
+    color: #333;
+    padding-bottom:10px;
 }
