--- a/src/styless.css
+++ b/src/styless.css
@@ -109,3 +109,9 @@ ul {
     color: #333;
     padding-bottom: 10px;
 }
+
+@media screen and (max-width:500px){
+	.bedrijf{
+		font-size: 11px;
+	}
+}
