--- a/src/styless.css
+++ b/src/styless.css
@@ -15,6 +15,10 @@ header {
     font-size: 18px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, .26);
     padding: 16px;
+    position: fixed;
+    top:0;
+    left:0;
+    right:0;
     vertical-align: text-bottom;
 }
 
@@ -36,7 +40,7 @@ header {
 }
 
 .content {
-    margin: 60px auto;
+    margin: 116px auto;
     color: #666;
     max-width: 595px;
 }
